--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
-    "build:prerender": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:gaulia-tech": "node dist/gaulia-tech/server/server.mjs"
+    "test": "ng test"
   },
   "prettier": {
     "printWidth": 100,
@@ -29,15 +27,8 @@
     "@angular/common": "^20.2.0",
     "@angular/compiler": "^20.2.0",
     "@angular/core": "^20.2.0",
-    "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
-    "@angular/platform-server": "^20.2.0",
-    "@angular/router": "^20.2.0",
-    "@angular/ssr": "^20.2.0",
     "@types/three": "^0.179.0",
-    "express": "^5.1.0",
-    "framer-motion": "^12.23.12",
-    "rxjs": "~7.8.0",
     "three": "^0.179.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -46,7 +37,6 @@
     "@angular/build": "^20.2.0",
     "@angular/cli": "^20.2.0",
     "@angular/compiler-cli": "^20.2.0",
-    "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.9.0",
