--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/common": "^20.2.0",
     "@angular/compiler": "^20.2.0",
     "@angular/core": "^20.2.0",
+    "@angular/forms": "^20.2.1",
     "@angular/platform-browser": "^20.2.0",
     "@types/three": "^0.179.0",
     "three": "^0.179.1",
