--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.2.1",
-    "@angular/common": "^20.2.0",
-    "@angular/compiler": "^20.2.0",
-    "@angular/core": "^20.2.0",
-    "@angular/platform-browser": "^20.2.0",
+    "@angular/animations": "20.2.1",
+    "@angular/common": "20.2.1",
+    "@angular/compiler": "20.2.1",
+    "@angular/core": "20.2.1",
+    "@angular/forms": "20.2.1",
+    "@angular/platform-browser": "20.2.1",
     "@types/three": "^0.179.0",
     "three": "^0.179.1",
     "tslib": "^2.3.0",
