fix: correct base href for GitHub Pages

--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,7 @@
               },
               "sourceMap": false,
               "extractLicenses": true,
-              "baseHref": "/gaulia-tech/"
+                "baseHref": "/GauliaTechWebsite/"
             },
             "development": {
               "optimization": false,
